Fixed overlap of rotated section.

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -39,7 +39,7 @@
 
         &.rotated {
 
-            margin-bottom: -2em;
+            margin: -2em 0;
             padding: 0;
             -webkit-transform: matrix(1, 0.034, 0, 1, 0, 0);
 
